Hw15 calendar (#15)
* Докеризация

* Докеризация. Интеграционные тесты

* Линтеры

* Тест на получение email, с проверкой как в БД, так и в mailhog

* Тест на бизнес логику

---------
