# hw12_13_14_15_calendar/api/notification_service.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.28.1
-// 	protoc        v5.27.1
+// 	protoc        v5.28.1
 // source: notification_service.proto
 
 package api
@@ -30,7 +30,7 @@ type CreateNotificationRequest struct {
 	UserId  string                 `protobuf:"bytes,2,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
 	Time    *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=time,proto3" json:"time,omitempty"`
 	Message string                 `protobuf:"bytes,4,opt,name=message,proto3" json:"message,omitempty"`
-	Sent    bool                   `protobuf:"varint,5,opt,name=sent,proto3" json:"sent,omitempty"`
+	Sent    string                 `protobuf:"bytes,5,opt,name=sent,proto3" json:"sent,omitempty"`
 }
 
 func (x *CreateNotificationRequest) Reset() {
@@ -93,11 +93,11 @@ func (x *CreateNotificationRequest) GetMessage() string {
 	return ""
 }
 
-func (x *CreateNotificationRequest) GetSent() bool {
+func (x *CreateNotificationRequest) GetSent() string {
 	if x != nil {
 		return x.Sent
 	}
-	return false
+	return ""
 }
 
 type CreateNotificationResponse struct {
@@ -157,7 +157,7 @@ type UpdateNotificationRequest struct {
 	UserId  string                 `protobuf:"bytes,3,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
 	Time    *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=time,proto3" json:"time,omitempty"`
 	Message string                 `protobuf:"bytes,5,opt,name=message,proto3" json:"message,omitempty"`
-	Sent    bool                   `protobuf:"varint,6,opt,name=sent,proto3" json:"sent,omitempty"`
+	Sent    string                 `protobuf:"bytes,6,opt,name=sent,proto3" json:"sent,omitempty"`
 }
 
 func (x *UpdateNotificationRequest) Reset() {
@@ -227,11 +227,11 @@ func (x *UpdateNotificationRequest) GetMessage() string {
 	return ""
 }
 
-func (x *UpdateNotificationRequest) GetSent() bool {
+func (x *UpdateNotificationRequest) GetSent() string {
 	if x != nil {
 		return x.Sent
 	}
-	return false
+	return ""
 }
 
 type UpdateNotificationResponse struct {
@@ -563,7 +563,7 @@ type Notification struct {
 	UserId  string                 `protobuf:"bytes,3,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
 	Time    *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=time,proto3" json:"time,omitempty"`
 	Message string                 `protobuf:"bytes,5,opt,name=message,proto3" json:"message,omitempty"`
-	Sent    bool                   `protobuf:"varint,6,opt,name=sent,proto3" json:"sent,omitempty"`
+	Sent    string                 `protobuf:"bytes,6,opt,name=sent,proto3" json:"sent,omitempty"`
 }
 
 func (x *Notification) Reset() {
@@ -633,11 +633,11 @@ func (x *Notification) GetMessage() string {
 	return ""
 }
 
-func (x *Notification) GetSent() bool {
+func (x *Notification) GetSent() string {
 	if x != nil {
 		return x.Sent
 	}
-	return false
+	return ""
 }
 
 var File_notification_service_proto protoreflect.FileDescriptor
@@ -657,7 +657,7 @@ var file_notification_service_proto_rawDesc = []byte{
 	0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x04,
 	0x74, 0x69, 0x6d, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18,
 	0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x12,
-	0x0a, 0x04, 0x73, 0x65, 0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x08, 0x52, 0x04, 0x73, 0x65,
+	0x0a, 0x04, 0x73, 0x65, 0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x65,
 	0x6e, 0x74, 0x22, 0x2c, 0x0a, 0x1a, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4e, 0x6f, 0x74, 0x69,
 	0x66, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
 	0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64,
@@ -672,7 +672,7 @@ var file_notification_service_proto_rawDesc = []byte{
 	0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x04, 0x74, 0x69,
 	0x6d, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x05, 0x20,
 	0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x12, 0x0a, 0x04,
-	0x73, 0x65, 0x6e, 0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x08, 0x52, 0x04, 0x73, 0x65, 0x6e, 0x74,
+	0x73, 0x65, 0x6e, 0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x65, 0x6e, 0x74,
 	0x22, 0x1c, 0x0a, 0x1a, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4e, 0x6f, 0x74, 0x69, 0x66, 0x69,
 	0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x2b,
 	0x0a, 0x19, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x4e, 0x6f, 0x74, 0x69, 0x66, 0x69, 0x63, 0x61,
@@ -712,7 +712,7 @@ var file_notification_service_proto_rawDesc = []byte{
 	0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x04, 0x74, 0x69, 0x6d, 0x65, 0x12,
 	0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09,
 	0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x73, 0x65, 0x6e,
-	0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x08, 0x52, 0x04, 0x73, 0x65, 0x6e, 0x74, 0x32, 0xbc, 0x03,
+	0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x65, 0x6e, 0x74, 0x32, 0xbc, 0x03,
 	0x0a, 0x13, 0x4e, 0x6f, 0x74, 0x69, 0x66, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x53, 0x65,
 	0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x55, 0x0a, 0x12, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4e,
 	0x6f, 0x74, 0x69, 0x66, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x12, 0x1e, 0x2e, 0x61, 0x70,
